--- a/index.html
+++ b/index.html
@@ -3,4 +3,21 @@
     <head>
         <link rel="stylesheet" href="styles.css">
     </head>
+    <body>
+        <img id="flowerBotLeft" src="flower1.png"/>
+        <img id="flowerTopRight" src="flower2.png"/>
+        <img id="flowerBotRight" src="flower3.png"/>
+        <h1 id="title">Boba Drop Hackclub Site</h1>
+
+        <p id="name">James Moser</p>
+        <a id="lily" href="LilyValley.html">Lily of the Valley</a>
+        <br></br>
+        <a id="tulip" href="tulip.html">Tulip</a>
+        <br></br>
+        <a id="chrys" href="chrys.html">Crysanthemum</a>
+        <br></br>
+        <a id="peony" href="peony.html">Peony</a>
+        <br></br>
+        <a id="hyacinth" href="hyacinth.html">Hyacinth</a>
+    </body>
 </html>
