--- a/LilyValley.html
+++ b/LilyValley.html
@@ -4,9 +4,9 @@
         <link rel="stylesheet" href="styles.css"/>
     </head>
     <body>
-        <img id="flowerBotLeft" src="flower1.png"/>
-        <img id="flowerTopRight" src="flower2.png"/>
-        <img id="flowerBotRight" src="flower3.png"/>
+        <img id="flowerBotLeft" src="../images/flower1.png"/>
+        <img id="flowerTopRight" src="../images/flower2.png"/>
+        <img id="flowerBotRight" src="../images/flower3.png"/>
         <h1 id="title">Lily of the Valley</h1>
         <a id="home" href="index.html">Home</a>
         <ul class="facts">
@@ -16,7 +16,7 @@
             <li>It's seeds are bright red berries</li>
         </ul>
         <div class="image">
-        <img id="lilyImg" src="lilyImg.jpg" />
+        <img id="lilyImg" src="../images/lilyImg.jpg" />
         </div>
     </body>
 </html>
