--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <img id="flowerBotLeft" src="flower1.png"/>
-        <img id="flowerTopRight" src="flower2.png"/>
-        <img id="flowerBotRight" src="flower3.png"/>
+        <img id="flowerBotLeft" src="../images/flower1.png"/>
+        <img id="flowerTopRight" src="../images/flower2.png"/>
+        <img id="flowerBotRight" src="../images/flower3.png"/>
         <h1 id="title">Boba Drop Hackclub Site</h1>
 
         <p id="name">James Moser</p>
