--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <img id="flowerBotLeft" src="../images/flower1.png"/>
         <img id="flowerTopRight" src="../images/flower2.png"/>
         <img id="flowerBotRight" src="../images/flower3.png"/>
-        <h1 id="title">Boba Drop Hackclub Site</h1>
+        <h1 id="title">Flower Info (Hackclub)</h1>
 
         <p id="name">James Moser</p>
         <a id="lily" href="LilyValley.html">Lily of the Valley</a>
