--- a/chrys.html
+++ b/chrys.html
@@ -4,9 +4,9 @@
         <link rel="stylesheet" href="styles.css"/>
     </head>
     <body>
-        <img id="flowerBotLeft" src="../images/flower1.png"/>
-        <img id="flowerTopRight" src="../images/flower2.png"/>
-        <img id="flowerBotRight" src="../images/flower3.png"/>
+        <img id="flowerBotLeft" src="images/flower1.png"/>
+        <img id="flowerTopRight" src="images/flower2.png"/>
+        <img id="flowerBotRight" src="images/flower3.png"/>
         <h1 id="title">Tulip</h1>
         <a id="home" href="index.html">Home</a>
         <ul class="facts">
@@ -16,7 +16,7 @@
             <li>Is commonly used to make insecticides</li>
         </ul>
         <div class="image">
-        <img class="space" id="chrysanthemumImage" src="../images/chrysImg.jpg" />
+        <img class="space" id="chrysanthemumImage" src="images/chrysImg.jpg" />
         </div>
     </body>
 </html>
