--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <img id="flowerBotLeft" src="./images/flower1.png"/>
-        <img id="flowerTopRight" src="/images/flower2.png"/>
+        <img id="flowerBotLeft" src="images/flower1.png"/>
+        <img id="flowerTopRight" src="images/flower2.png"/>
         <img id="flowerBotRight" src="images/flower3.png"/>
         <h1 id="title">Flower Info (Hackclub)</h1>
 
