--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>Flower Info!</title>
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
@@ -10,14 +11,15 @@
         <h1 id="title">Flower Info (Hackclub)</h1>
 
         <p id="name">James Moser</p>
-        <a id="lily" href="LilyValley.html">Lily of the Valley</a>
-        <br></br>
-        <a id="tulip" href="tulip.html">Tulip</a>
-        <br></br>
-        <a id="chrys" href="chrys.html">Crysanthemum</a>
-        <br></br>
-        <a id="peony" href="peony.html">Peony</a>
-        <br></br>
-        <a id="hyacinth" href="hyacinth.html">Hyacinth</a>
+        <nav>
+
+        <ul id="navi">
+        <li><a id="lily" href="LilyValley.html">Lily of the Valley</a></li>
+        <li><a id="tulip" href="tulip.html">Tulip</a></li>
+       <li> <a id="chrys" href="chrys.html">Crysanthemum</a></li>
+       <li> <a id="peony" href="peony.html">Peony</a></li>
+       <li> <a id="hyacinth" href="hyacinth.html">Hyacinth</a></li>
+        </ul>
+        </nav>
     </body>
 </html>
