--- a/LilyValley.html
+++ b/LilyValley.html
@@ -2,10 +2,11 @@
 <html>
     <head>
         <link rel="stylesheet" href="styles.css"/>
+        <title>Lilly of the Valley!</title>
     </head>
     <body>
         <img id="flowerBotLeft" src="images/flower1.png"/>
-        <img id="flowerTopRight" src="images/flower2.png"/>
+        <a href="heart.html"><img id="flowerTopRight" src="images/flower2.png"/></a>
         <img id="flowerBotRight" src="images/flower3.png"/>
         <h1 id="title">Lily of the Valley</h1>
         <a id="home" href="index.html">Home</a>
