--- a/hyacinth.html
+++ b/hyacinth.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="styles.css"/>
+        <title>Hyacinth!</title>
     </head>
     <body>
         <img id="flowerBotLeft" src="images/flower1.png"/>
